<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    tools:context="com.app.villa.gymvirtual.GUI.MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/tamanoTexto"
        android:gravity="center_horizontal"
        android:textColor="@color/colorTitle"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/txtuserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/user"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/imageView"/>
    <EditText
        android:id="@+id/editUserName"
        android:inputType="textAutoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtuserName"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/pass"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/editUserName"/>
    <EditText
        android:id="@+id/editPassword"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:text="@string/btnIniciar"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:background="@color/colorBtn"
        android:padding="10dp"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textAlignment="center"
        android:layout_below="@+id/editPassword"
        android:text="@string/btnRegistrar"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:background="@color/colorBtn"
        />
</RelativeLayout>
